@@ -3,6 +3,10 @@ CHANGES for LIRE
 
 2012-07-23
 ==========
+  - Typo in net.semanticmetadata.lire.indexing.MetricSpacesInvertedListIndexing
+
+2012-07-23
+==========
   - Updated libs in samples.
   - Updated build.xml
   - refactored name of surf visual words index field
